--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pat’s Salmon Cookies </title>
 </head>
 <body>
-    <h2>Salmon Cookies</h2>
+    <h2>Pat’s Salmon Cookies </h2>
     <img src="https://tse2.mm.bing.net/th?id=OIP.VGBmZOIHDWbqyJpjj129OAHaHa&pid=Api&P=0&w=300&h=300" alt="">
 
     <a href="sales.html">Sales</a>
