--- a/sales.html
+++ b/sales.html
@@ -4,14 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pat’s Salmon Cookies salles</title>
+  <style>
+      table, th, td {
+  border: 1px solid black;
+}
+  </style>
 </head>
 <body>
     <header>
        
     </header>
     <main>
-<section id="store place"></section>
+        <table id="table2">
+            <tr>
+            <th>place</th>
+            <th>6am</th>
+            <th>7am</th>
+            <th>8am</th>
+            <th>9am</th>
+            <th>10am</th>
+            <th>11am</th>
+            <th>12am</th>
+            <th>1pm</th>
+            <th>2pm</th>
+            <th>3pm</th>
+            <th>4pm</th>
+            <th>5pm</th>
+            <th>6pm</th>
+            <th>7pm</th>
+            <th>Daily Location Total</th>
+        </tr>
+        <tr ></tr>
+        </table>
+
     </main>
     <footer>
         <a href="index.html">Home Page</a>
