--- a/index.html
+++ b/index.html
@@ -1,15 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Pat’s Salmon Cookies </title>
 </head>
-<body>
-    <h2>Pat’s Salmon Cookies </h2>
-    <img src="https://tse2.mm.bing.net/th?id=OIP.VGBmZOIHDWbqyJpjj129OAHaHa&pid=Api&P=0&w=300&h=300" alt="">
 
-    <a href="sales.html">Sales</a>
+<body>
+    <header>
+        <h2>Pat’s Salmon Cookies </h2>
+        <ul id="navBar">
+            <li><a href=""></a>About Us</li>
+            <li><a href=""></a>Contact Us</li>
+        </ul>
+    </header>
+    <div class="clear"></div>
+    <main>
+        <div id="informations">
+
+            <div id="locations">
+                <h3>Our_Branches:</h3>
+                <ul>
+                    <li><a href="#"></a>Seattle</li>
+                    <li><a href="#"></a>Tokyo</li>
+                    <li><a href="#"></a>Dubai</li>
+                    <li><a href="#"></a>Paris</li>
+                    <li><a href="#"></a>Lima</li>
+                </ul>
+            </div>
+            <div id="placeInformations">
+                <h4>Opining Time</h4>
+            </br>
+                <p>We opend every day from 7:00 am to 8:00 pm</p>
+            </br>
+                <p id="prgraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, ex delectus. Et vitae error
+                    laudantium consectetur expedita voluptatum, placeat fugit. Sapiente accusamus distinctio mollitia,
+                    debitis possimus illo animi nisi officia.</p>
+
+            </div>
+            <img id="firstImage"
+                src="https://tse2.mm.bing.net/th?id=OIP.VGBmZOIHDWbqyJpjj129OAHaHa&pid=Api&P=0&w=300&h=300">
+
+        </div>
+    </main>
+    <div class="clear"></div>
+    <footer>
+        <a href="sales.html">Sales Page</a>
+    </footer>
+
 </body>
+
 </html>
