--- a/sales.html
+++ b/sales.html
@@ -6,16 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pat’s Salmon Cookies salles</title>
   <style>
+      body{
+          text-align: center;
+          margin: 50px;
+          background-color: aqua;
+      }
       table, th, td {
   border: 1px solid black;
+  text-align: center;
+}
+table{
+    margin: 50px;
+    margin-left: 300px;
+}
+img{
+    width: 200px;
+    height: 200px;
 }
   </style>
+  
 </head>
 <body>
     <header>
        
     </header>
     <main>
+        <form action="" id="addNewPlace">
+            <fieldset>
+            <legend>Add new place</legend>
+            <label for="country">Country</label>
+            <input type="text" name="country" id="country"/>
+             <label for="Minimum custmer per hour">Minimum custmer per hour</label>
+            <input type="text" name="Minimum custmer per hour" id="min"/>
+            <br><label for="Maximum">Maximum custmer per hour</label>
+            <input type="text" name="maximum" id="max"/>
+            <label for="Maximum">Avrage salles per custmer</label>
+            <input type="text" name="maximum" id="Avrage"/>
+            <br/>
+            <input type="submit" value="Add new place">
+        </fieldset>
+        </form>
         <table id="table2">
             <tr>
             <th>place</th>
@@ -37,10 +67,15 @@
         </tr>
         <tr ></tr>
         </table>
+<!-- <button id="btn">clice</button> -->
 
+<img src="./images/chinook.jpg" >
+<img src="./images/cutter.jpeg" >
+<img src="./images/family.jpg" >
+<img src="./images/fish.jpg" >
     </main>
     <footer>
-        <a href="index.html">Home Page</a>
+        <a href="index.html" id="home">Home Page</a>
     </footer>
  <script src="./js/app.js"></script>   
 </body>
